# Discrete_Abstraction_for_Sparse_DRL

./: .gitignore  .gitmodules  README.md  collected_data.csv  organize_file.py  pixi.toml  pyproject.toml  requirements.txt  setup.py
csv/: 500m_10Mhz_3UAVs.csv  500m_20Mhz_3UAVs.csv  500m_20Mhz_4UAVs.csv  500m_20Mhz_5UAVs.csv
docker/: Dockerfile  README.md  build.bash  requirements.txt  run.bash
her_sac_uav_tensorboard/10x10/13/: events.out.tfevents.1739964664.6fff1e5a0e9d.1663227.3
qtables/deterministic/: qtable_10_obstacles_True.npz
sac_uav_tensorboard/SAC_1/: events.out.tfevents.1739533720.6fff1e5a0e9d.829462.0
src/: definitions.py  main_benchmarl.py  main_cont.py  main_her.py  main_multi_sb3.py  main_multiagent_cont.py  main_sac.py  main_sac_her.py  main_sb3.py  main_stable_baselines.py  multi_visualize.py  plot.py  upstream_collect_data.py  value_function_computation.py  visualize.py
src/algorithms/: agent_rl.py  agent_rl_cont.py  learning_algorithm.py  qlearning.py  rmax.py
src/configs/: env_config.py  sweepconfig.yaml
src/environments/: action_rl.py  base_environment.py  detect_event.py  event_detector.py  maps.py  maps_cont.py  state_encoder.py  state_encoder_uav.py
src/episodes/: multi_uav_cont_episode_100.avi  uav_cont_episode_0.avi  uav_cont_episode_2.avi
src/reward_machines/: reward_machine.py  reward_machine_cont.py
src/utils/: evaluation_metrics.py  heatmap.py  map_parsing.py  message.py  optimal_uav_number.py  paths.py  plot.py  render_env_random_policy.py  scheduler.py  spectral_efficiency.py  utils.py
(+432 files in other folders)
