[project]
authors = [{name = "neverorfrog"}]
requires-python = "==3.10.*"
description = "Add a short description here"
name = "src"
version = "0.0.1"
dependencies = ["opencv-python>=4.11.0.86,<5", "unified-planning>=1.2.0,<2"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.tasks]
board-multi = "tensorboard --logdir_spec=./tensorboards/multiagent_tensorboardc"
board-rh = "tensorboard --logdir_spec=./sac_hr_uav_tensorboard"
board-sac = "tensorboard --logdir_spec=./sac_uav_tensorboard"
board-her = "tensorboard --logdir_spec=./her_uav_tensorboard"
board-vs = "tensorboard --logdir_spec=./versus_tensorboard"
board-a1-rh = "tensorboard --logdir_spec=./sac_hr_uav_tensorboard/a1"
board-a3-rh = "tensorboard --logdir_spec=./sac_hr_uav_tensorboard/a3"
multi-main-old = "python src/main_multiagent_cont.py"
multi-main = "python src/main_multi_sb3.py"
single-main = "python src/main_sb3.py"
eval = "python src/visualize.py"
eval-multi = "python src/multi_visualize.py"

[tool.pixi.pypi-dependencies]
src = { path = ".", editable = true}

[tool.pixi.activation]
env = { PYTHONPATH = ".:$PYTHONPATH"}

[tool.pixi.dependencies]
tensorboard = ">=2.19.0,<3"
pytorch-cpu = "*"
imageio = ">=2.37.0,<3"
pygame = ">=2.6.1,<3"
seaborn = ">=0.13.2,<0.14"
stable-baselines3 = ">=2.5.0,<3"
scipy = ">=1.15.2,<2"
numpy = ">=1.26.4,<2"
